Editor: Avoid padding overflow by content-box default

--- a/client/post-editor/style.scss
+++ b/client/post-editor/style.scss
@@ -114,6 +114,7 @@
 
 .editor__header,
 .editor .mce-edit-area {
+	box-sizing: border-box;
 	padding: 0 16px;
 
 	@include breakpoint( ">1040px" ) {
